--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -69,13 +69,13 @@
 
     <ImageView
         android:id="@+id/imageView23"
-        android:layout_width="234dp"
-        android:layout_height="219dp"
+        android:layout_width="41dp"
+        android:layout_height="36dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintHorizontal_bias="0.221"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/home__1_"
-        tools:layout_editor_absoluteY="546dp" />
+        app:srcCompat="@drawable/_1"
+        tools:layout_editor_absoluteY="693dp" />
 
     <ImageView
         android:id="@+id/imageView24"
